--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <p>git diff</p>
     <p>git commit --amend</p>
     <p>git commit --amend</p>
-<<<<<<< HEAD
     <p>git margi!</p>
-    <p>コンフリクト</p>
-=======
     <p>conflict</p>
->>>>>>> feature
+    <p>pull request</p>
   </body>
 </html>
